--- a/app/globals.css
+++ b/app/globals.css
@@ -52,3 +52,14 @@
 body{
   scroll-behavior: smooth
 }
+/* Hide the default increment and decrement buttons */
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+ -webkit-appearance: none;
+ margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+ -moz-appearance: textfield;
+}
